--- a/html/chepter5/oneTrueLayout.html
+++ b/html/chepter5/oneTrueLayout.html
@@ -21,11 +21,13 @@
         float: left;
         width: 150px;
         background: red;
+
       }
       #right {
         float: left;
         width: 350px;
         background-color: blue;
+
       }
       #bottom {
         background-color: purple;
@@ -35,12 +37,14 @@
   <body>
     <body>
       <div id="top">
+        lorem
         Lorem ipdsafsdaf sadfsaf
         safafdsfdasfsdsdfasfdlsa;kfjaslk;fsalfj;ksadfasdflkjasfj;lsadfjlasjkmf
         safasdsum dolor sit amet, ...
         Loremfasdfsahdkfjlashlkafdhjlasfklhjafhjkllhjk asdflkjasfj;lsadfjlasjkmf
         saf asdsum dolor sit amet, ... Lorem asdflkjasfj;lsadfjlasjkmf saf
         asdsum dolor sit amet, ... Lorem
+        
       </div>
       <div id="middle">
         <div id="left">
@@ -49,8 +53,8 @@
         <div id="right">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. ... asdf
           asfasdnsectetur adipiscing elit. asdf asfasdnsectetur adipiscing elit.
-          asdf asfasdnsectetur adipiscing elit. asdf asfasdnsectetur adipiscing
-          elit. asdf asfasdnsectetur adipiscing elit.
+          asdf asfasdnsectetur adipdsfas fadsf aiscing elit. asdf asfasdnsectetur adipiscing
+
         </div>
       </div>
       <div id="bottom">
