--- a/html/chepter5/pattern1.html
+++ b/html/chepter5/pattern1.html
@@ -37,20 +37,13 @@
     <div id="section">
       <h1>Lorem ipsum dolor sit amet</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra
-        ex a augue porta, quis luctus eros sollicitudin. Nullam in turpis
-        semper, lacinia justo a, facilisis lacus. Nunc odio nisi, lobortis sit
-        amet diam et, vestibulum posuere risus. Donec viverra, risus a ultricies
-        fringilla, lectus purus aliquet quam, sit amet commodo nisl mi vitae
-        nunc. Nulla cursus non urna eu elementum. Integer at mi auctor mi
-        suscipit dapibus nec non orci. Sed at libero non augue ultricies euismod
-        a non erat. Nunc ipsum nulla, scelerisque id enim nec, lobortis ornare
-        leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras
-        suscipit egestas felis, vitae bibendum mi ullamcorper at. Integer
-        scelerisque cursus nunc, ultricies tincidunt ante tempus ut. Nam id
-        convallis justo. Donec sagittis, magna at laoreet blandit, dolor lectus
-        rutrum augue, in accumsan velit orci vitae elit. Vestibulum diam lectus,
-        convallis porttitor velit eget, dignissim ullamcorper felis.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla sunt est
+        vel cum quisquam nam dolorem ipsa at reprehenderit recusandae magnam
+        quae officia ad, illum porro reiciendis tempore debitis cumque. Lorem,
+        ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa suscipit
+        temporibus quas eum, quod numquam, esse voluptatum quaerat quia
+        reprehenderit nobis. Alias numquam odit in, repellat dolorum voluptas
+        laboriosam?
       </p>
     </div>
   </body>
