--- a/vuejs/ch03/03-12-2.html
+++ b/vuejs/ch03/03-12-2.html
@@ -44,6 +44,7 @@
           </tr>
         </tbody>
       </table>
+      <table class="table"></table>
     </div>
     <script src="https://unpkg.com/vue"></script>
     <script>
